fix(sdk-964): align hcp name

--- a/packages/hcl-sdk-web-ui/src/components/ui-kits/hcl-sdk-doctor-card/hcl-sdk-doctor-card.scss
+++ b/packages/hcl-sdk-web-ui/src/components/ui-kits/hcl-sdk-doctor-card/hcl-sdk-doctor-card.scss
@@ -39,6 +39,7 @@
     .name {
       color: var(--hcl-color-secondary);
       font-weight: 500;
+      text-align: start;
 
       img {
         width: 1em;
